objects/BMCServiceDesk__BMC_Cost__c.object
<CustomObject>
    <description>BMC_Cost. CMDB Specifies the cost incurred for providing a service.</description>
    <fields>
        <fullName>BMCServiceDesk__Cost_Amount__c</fullName>
        <label>Cost Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Cost_Derived_Flag__c</fullName>
        <label>Cost Derived Flag</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Cost</label>
    <nameField>
        <label>Cost Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Costs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>